fix content box sizing (no overlap with nav links

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body {
   max-width: 700px;
   margin: 0 auto;
   position: relative;
+  z-index: -1;
 }
 
 .navbar {
@@ -157,8 +158,9 @@ body {
 }
 
 .content {
-  position: absolute;
-  /* z-index: 1; */
+  /* position: absolute; */
+  position: relative;
+  z-index: 1;
 }
 
 .container {
@@ -166,7 +168,7 @@ body {
   left: 150px; 
   bottom: 50px;
   width: 80%;
-  padding-left: 70px;
+  padding-left: 30px;
   padding-right: 50px;
   position: fixed;
   overflow-y: auto;
